Minor edit to the readme, taking into account we are building against QT5 now.

--- a/src/ReadMe
+++ b/src/ReadMe
@@ -1,11 +1,8 @@
-READ THIS IN ORDER TO COMPILE THE Qt4 TEMPLATE
-----------------------------------------------
+COMPILATION INSTRUCTIONS FOR QT5
+--------------------------------
 
-Before compiling, check the Qt Options, go to 
-Project->Project Options->C++ Support and open the Qt Options tab.
-
-Check that the Qt installation directory is correct for the Qt version you've chosen.
+Todo.
 
 ------------------
-Andreas Pakulat
-July 2006
+Martin Tee
+May 2013
